# druks

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: build-release-images.yml  on-pull-request-backend.yml  on-pull-request-frontend.yml  publish-sandbox-image.yml
backend/: alembic.ini
backend/druks/: agents.py  alembic_support.py  bootstrap.py  cli.py  database.py  db.py  doctor.py  models.py  redis.py  schemas.py  settings.py  setup_env.py  signals.py  workflows.py
backend/migrations/: env.py
backend/tests/: conftest.py  test_accounts_migration.py  test_agents.py  (+94 more)
backend/tests/druks-field_notes/: pyproject.toml
backend/tests/druks-field_notes/druks_field_notes/: contracts.py  extension.py  models.py  routes.py  schemas.py  subscribers.py  workflows.py
backend/tests/druks-field_notes/druks_field_notes/migrations/versions/: field_notes_0001_notes.py
backend/tests/druks-field_notes/druks_field_notes/templates/prompts/field_notes/: summarize.md
deploy/: README.md  compose.dev.init.sql  compose.dev.yaml  compose.yaml
docs/: concepts.md  configuration.md  development.md  full-local.md  index.md  open-source-cut.md  releasing.md  troubleshooting.md  writing-an-extension.md
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  vitest.config.ts
scripts/: _github_app_setup.py  deploy.sh  install.sh
(+213 files in other folders)
